--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,4 +1,4 @@
-name: Automerge PR de Carlos
+name: Automerge PR de Carlos + Borrar Rama
 
 on:
   pull_request:
@@ -19,6 +19,7 @@ jobs:
             const pr = context.payload.pull_request;
 
             if (pr.mergeable_state === 'clean') {
+              // Hacemos el merge
               await github.pulls.merge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -26,6 +27,19 @@ jobs:
                 merge_method: "squash"
               });
               console.log("✅ PR fusionado automáticamente 🎉");
+
+              // Borramos la rama remota
+              const ref = `heads/${pr.head.ref}`;
+              if (pr.head.ref !== 'main' && pr.head.ref !== 'master') {
+                await github.git.deleteRef({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  ref: ref
+                });
+                console.log(`🧹 Rama '${pr.head.ref}' eliminada automáticamente.`);
+              } else {
+                console.log("⚠️ No se borra la rama principal (main/master).");
+              }
             } else {
               console.log("⚠️ PR no mergeable por ahora ⏳");
             }
